--- a/src/my-dry-flow.html
+++ b/src/my-dry-flow.html
@@ -7,6 +7,12 @@
 <link rel="import" href="../bower_components/paper-tabs/paper-tabs.html">
 <link rel="import" href="../bower_components/paper-tabs/paper-tab.html">
 
+<link rel="import" href="../bower_components/app-pouchdb/app-pouchdb-query.html">
+<link rel="import" href="../bower_components/app-pouchdb/app-pouchdb-document.html">
+<link rel="import" href="../bower_components/app-pouchdb/app-pouchdb-conflict-resolution.html">
+<!--
+<link rel="import" href="../bower_components/iron-input/iron-input.html">
+ -->
 <dom-module id="my-dry-flow">
   <template>
     <style include="shared-styles">
@@ -17,6 +23,28 @@
       }
     </style>
 
+    <!-- ############ DATABASE SETUP ############ -->
+    <app-pouchdb-confict-resolution
+        strategy="firstWriteWins">
+    </app-pouchdb-conflict-resolution>
+
+    <app-pouchdb-document
+        db-name="dry-flow"
+        doc-id="test-document"
+        data={{test_obj}}>
+    </app-pouchdb-document>
+    <!-- addtnl attribs:
+        id="document"
+    -->
+
+    <!-- <app-pouchdb-sync
+        src="https://7yl4r.cloudant.com/dry-flow"
+        target="dry-flow"
+        bidirectional>
+    </app-pouchdb-sync>
+    -->
+
+    <!-- ############ MAIN APP AREA ############ -->
     <div class="card">
         Component Descriptions
         <paper-tabs selected="{{selected}}" scrollable>
@@ -26,10 +54,24 @@
           <paper-tab> (+) </paper-tab>
         </paper-tabs>
         <iron-pages selected="{{selected}}">
-              <div>CONTENT ONE</div>
-              <div>CONTENT TWO</div>
-              <div>CONTENT THREE</div>
-              <div>TODO: create new...</div>
+            <div>
+                BEGIN
+
+                <input type="text" value="{{test_obj.name::change}}">
+
+<!--
+                <input
+                    is="iron-input"
+                    bind-value="{{test_obj.name}}">
+                </input>
+ -->
+                name: {{test_obj.name}}
+
+                END
+            </div>
+            <div>CONTENT TWO</div>
+            <div>CONTENT THREE</div>
+            <div>TODO: create new...</div>
         </iron-pages>
     </div>
   </template>
